Login modal z-index issue in course details fixed

--- a/assets/scss/front/course/_single-course-details.scss
+++ b/assets/scss/front/course/_single-course-details.scss
@@ -68,6 +68,7 @@
     &.tutor-sidebar-sticky {
 		position: sticky;
 		top: 50px;
+        z-index: 1025;
 	}
     
     .tutor-sidebar-card {
